plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id "me.shedaniel.unified-publishing" version "0.1.+"
    id 'net.neoforged.gradle.userdev' version '7.0.5'
    id 'net.neoforged.gradle.mixin' version '7.0.5'
}

version = "${minecraft_version}-neoforge-${mod_version}"
group = "snownee.jade" // http://maven.apache.org/guides/mini/guide-naming-conventions.html

repositories {
    mavenLocal()
}

base {
    archivesName = "Jade"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)
println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

if (System.getenv().BUILD_NUMBER != null) {
    // Maven version scheme uses dot to separate things
    version += ".${System.getenv().BUILD_NUMBER}"
}

minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')

// Default run configurations.
// These can be tweaked, removed, or duplicated as needed.
runs {
    configureEach {
        // Recommended logging data for a userdev environment
        // The markers can be added/remove as needed separated by commas.
        // "SCAN": For mods scan.
        // "REGISTRIES": For firing of registry events.
        // "REGISTRYDUMP": For getting the contents of all registries.
        systemProperty 'forge.logging.markers', 'REGISTRIES'

        // Recommended logging level for the console
        // You can set various levels here.
        // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
        systemProperty 'forge.logging.console.level', 'debug'

        modSource project.sourceSets.main

		// Export mixin-changed classes
		systemProperty 'mixin.debug.export', 'true'
		systemProperty 'mixin.env.remapRefMap', 'true'
		systemProperty 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

		// Add mixin config to runtime
		programArguments.addAll '-mixin.config=' + project.getProperty('mod_id') + '.mixins.json'
    }
	
	client {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id

		// These arguments allow for optional authentication with Mojang servers.
		// If you want to authenticate, put these properties in GRADLE_HOME/gradle.properties.
		// By default, this is C:\Users\<your username>\.gradle\gradle.properties on Windows or ~/.gradle/gradle.properties on Linux/MacOS.
		if (project.hasProperty('mc_uuid')) {
			// Your UUID, trimmed / without the dashes
			programArguments.addAll '--uuid', project.getProperty('mc_uuid')
		}
		if (project.hasProperty('mc_username')) {
			// Your Minecraft in-game username, not email
			programArguments.addAll '--username', project.getProperty('mc_username')
		}
		if (project.hasProperty('mc_accessToken')) {
			// Your current access token. When it expires, you need to retrieve a new one and regenerate your run configurations.
			// You may be able to find it in your .minecraft folder in launcher_accounts.json or launcher_profiles.json.
			programArguments.addAll '--accessToken', project.getProperty('mc_accessToken')
		}
	}

    // This run config launches GameTestServer and runs all registered gametests, then exits.
    // By default, the server will crash when no gametests are provided.
    // The gametest system is also enabled by default for other run configs under the /test command.
    gameTestServer {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
    }

    data {
        // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
        // workingDirectory project.file('run-data')

        // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
        programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

task apiJar(type: Jar) {
    archiveClassifier = 'api'
    include 'snownee/jade/api/**/*'
    from sourceSets.main.allSource
    from sourceSets.main.output
}

artifacts {
    archives apiJar
}

repositories {
    maven {
        name = "jei"
        url = "https://maven.blamejared.com/"
    }
    maven {
        url = "https://modmaven.dev"
    }
    maven {
        url = "https://www.cursemaven.com"
    }
    //maven {
    //    name = "tehnut"
    //    url = "https://maven.tehnut.info"
    //}
}

mixin {
    // add sourceSets.main, "${mod_id}.refmap.json"
    // Sets up the mixin config; this gets added to run configurations and the manifest in the final jar
    config "${mod_id}.mixins.json"

    // Enables exporting mixin-changed classes to .mixin.out in the run folder
    // debug.export = true
}

dependencies {
    // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
    // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
    // The userdev artifact is a special name and will get all sorts of transformations applied to it.
    implementation "net.neoforged:neoforge:${neo_version}"
    // annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"

    compileOnly "mezz.jei:jei-1.20.2-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-1.20.2-forge-api:${jei_version}"
    //runtimeOnly "mezz.jei:jei-1.20.2-forge:${jei_version}"
    //implementation "curse.maven:jei-238222:3834070"
}

// Example for how to get properties into the manifest for reading by the runtime..
jar {
    exclude '/snownee/jade/test'
    manifest {
        attributes([
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : "${mod_version}",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConfigs"            : "${mod_id}.mixins.json"
        ])
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

/*
unifiedPublishing {
    project {
        displayName = project.version
        version = project.mod_version // Optional, Inferred from project by default
        changelog = file("CHANGELOG.md").exists() ? file("CHANGELOG.md").text : "" // Optional, in markdown format
        releaseType = project.release_type // Optional, use "release", "beta" or "alpha"
        gameVersions = ["1.20.2"]
        gameLoaders = ["neoforge"]

        mainPublication tasks.jar // Declares the publicated jar
        secondaryPublications.builtBy(tasks.apiJar)

        curseforge {
            token = System.getenv("CURSE_TOKEN")
            id = "324717" // Required, must be a string, ID of CurseForge project

            relations { // Optional, Inferred from the relations above by default
                optional "jei"
            }
        }

        modrinth {
            token = System.getenv("MODRINTH_TOKEN")
            id = "nvQzSEkH" // Required, must be a string, ID of Modrinth project
            displayName = project.mod_version

            relations { // Optional, Inferred from the relations above by default
                optional "jei"
            }
        }
    }
}
*/
